--- a/app.config
+++ b/app.config
@@ -1,12 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-      <appSettings>
-        <add key="XMLFilePath" value="C:\Users\e5582650\source\repos\appldetails.xml"/>
-        <add key="XMLTemplatePath" value="C:\Users\e5582650\source\repos\appl_xsl.xsl"/>
-    </appSettings>    
-    <connectionStrings>
-        <add name="ProcessDiscoveryDB" 
-             connectionString="Data Source=BLR1-LTG3WLQV2\SQLEXPRESS;Initial Catalog=ProcessDiscoveryDB;Persist Security Info=True;User ID=ProcessDiscovery;Password=Password@123"
-             providerName="System.Data.SqlClient" />
-    </connectionStrings>
+  <appSettings>
+    <add key="XMLFilePath" value="C:\Users\e5582650\source\repos\appldetails.xml" />
+    <add key="XMLTemplatePath" value="C:\Users\e5582650\source\repos\appl_xsl.xsl" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <connectionStrings>
+    <add name="ProcessDiscoveryDB" connectionString="Data Source=BLR1-LTG3WLQV2\SQLEXPRESS;Initial Catalog=ProcessDiscoveryDB;Persist Security Info=True;User ID=ProcessDiscovery;Password=Password@123" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
