--- a/app.config
+++ b/app.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="XMLFilePath" value="C:\Users\e5582650\source\repos\appldetails.xml" />
-    <add key="XMLTemplatePath" value="C:\Users\e5582650\source\repos\appl_xsl.xsl" />
+    <add key="XMLFilePath" value="C:\Users\e5582650\source\repos\vigneshk01\ProcessDicoveryLatest\appldetails.xml" />
+    <add key="XMLTemplatePath" value="C:\Users\e5582650\source\repos\vigneshk01\ProcessDicoveryLatest\appl_xsl.xsl" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <connectionStrings>
