140320 - Deleted unecessary files

--- a/app.config
+++ b/app.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+  </configSections>
   <appSettings>
     <add key="XMLFilePath" value="C:\Users\e5582650\source\repos\vigneshk01\ProcessDicoveryLatest\appldetails.xml" />
     <add key="XMLTemplatePath" value="C:\Users\e5582650\source\repos\vigneshk01\ProcessDicoveryLatest\appl_xsl.xsl" />
